--- a/package.json
+++ b/package.json
@@ -7,8 +7,19 @@
   },
   "type": "module",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-solid": "^0.12.1",
+    "eslint-plugin-tailwindcss": "^3.11.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.8",
     "solid-start-node": "^0.2.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
