--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/wanakana": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^10.4.13",
