feat: questions store and study page

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,6 @@
   ],
   "rules": {
     "unused-imports/no-unused-imports": "error",
-    "prettier/prettier": ["error", { "endOfLine": "auto" }]
+    "prettier/prettier": ["error", { "endOfLine": "auto", "singleQuote": true, "semi": false }]
   }
 }
