--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
+    "gsap": "^3.11.5",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
     "solid-zustand": "^1.5.0",
