--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gsap": "^3.11.5",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
+    "solid-transition-group": "^0.2.2",
     "solid-zustand": "^1.5.0",
     "undici": "^5.15.1",
     "wanakana": "^5.1.0",
