--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
+    "solid-start-cloudflare-pages": "^0.2.26",
     "solid-start-node": "^0.2.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
