--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
-    "solid-start-cloudflare-pages": "^0.2.26",
     "solid-start-node": "^0.2.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
@@ -33,6 +32,7 @@
     "gsap": "^3.11.5",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
+    "solid-start-vercel": "^0.2.26",
     "solid-transition-group": "^0.2.2",
     "solid-zustand": "^1.5.0",
     "undici": "^5.15.1",
