--- a/package.json
+++ b/package.json
@@ -3,27 +3,20 @@
   "scripts": {
     "dev": "solid-start dev",
     "build": "solid-start build",
-    "start": "solid-start start"
+    "start": "solid-start start",
+    "lint": "biome lint .",
+    "format": "biome format . --write",
+    "check": "biome check ."
   },
   "type": "module",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.43.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.35.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-solid": "^0.14.5",
-    "eslint-plugin-tailwindcss": "^3.18.2",
-    "eslint-plugin-unused-imports": "^4.2.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
     "solid-start-node": "^0.3.11",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
-    "vite": "^4.5.14"
+    "vite": "^6.0.0",
+    "@biomejs/biome": "^1.9.4"
   },
   "dependencies": {
     "@solidjs/meta": "^0.29.4",
