--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
   "name": "kanakata",
   "scripts": {
-    "dev": "solid-start dev",
-    "build": "solid-start build",
-    "start": "solid-start start",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "biome lint .",
     "format": "biome format . --write",
     "check": "biome check ."
   },
   "type": "module",
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "solid-start-node": "^0.3.11",
-    "tailwindcss": "^3.4.17",
+    "@biomejs/biome": "^2.2.4",
+    "@tailwindcss/vite": "^4.1.13",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
-    "vite": "^6.0.0",
-    "@biomejs/biome": "^1.9.4"
+    "vite": "^5.4.20",
+    "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
-    "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.8.4",
+    "@solidjs/router": "^0.15.3",
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "solid-js": "^1.9.9",
-    "solid-start": "^0.3.11",
-    "solid-start-vercel": "^0.3.11",
     "solid-transition-group": "^0.3.0",
     "solid-zustand": "^1.8.1",
     "tailwind-merge": "^3.3.1",
-    "undici": "^7.16.0",
     "wanakana": "^5.3.1",
     "zustand": "^4.5.7"
   },
