--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/howler": "^2.2.12",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^5.4.20",
@@ -21,6 +22,7 @@
     "@solidjs/router": "^0.15.3",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "howler": "^2.2.4",
     "solid-js": "^1.9.9",
     "solid-transition-group": "^0.3.0",
     "solid-zustand": "^1.8.1",
